--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 spring.application.name=KoiFarmShop
+spring.security.user.name=admin
+spring.security.user.password=123
+spring.datasource.url=jdbc:mysql://localhost:3306/KoiFarmShop
+spring.datasource.username=root
+spring.datasource.password=123
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.hibernate.ddl-auto=update
+
