--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,5 +6,5 @@ spring.datasource.password=123
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=update
-
+jwt.secret=Ik0HdjZT0CDZdBY5WEgEQ/81i2Mt2RjVUw1B/Uck3FM=
 server.servlet.context-path= /koifarm
