--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,12 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=update
 jwt.secret=Ik0HdjZT0CDZdBY5WEgEQ/81i2Mt2RjVUw1B/Uck3FM=
 server.servlet.context-path= /koifarm
+
+
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=trananhhao225@gmail.com
+spring.mail.password=xebn mtbz faho ygyi
+spring.mail.properties.auth = true
+spring.mail.properties.starttls.enable = true
