--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=KoiFarmShop
-
+#Config MySQL
 spring.datasource.url=jdbc:mysql://localhost:3306/KoiFarmShop
 spring.datasource.username=root
 spring.datasource.password=123
@@ -26,3 +26,9 @@ spring.mail.properties.mail.smtp.starttls.required=true
 springdoc.api-docs.enabled=true
 springdoc.swagger-ui.enabled=true
 springdoc.swagger-ui.path=/swagger-ui.html
+#login with gg
+spring.security.oauth2.client.registration.google.client-id=66425844845-e5tjsmdu437l5uj84hbrfce9aj9gcr2t.apps.googleusercontent.com
+spring.security.oauth2.client.registration.google.client-secret=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
+spring.security.oauth2.client.registration.google.scope=profile,email
+
+
