--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,8 +13,8 @@ server.servlet.context-path= /koifarm
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=locttse182329@fpt.edu.vn
-spring.mail.password=kxjm oohr axrb fayt
+spring.mail.username=koifarmofficial@gmail.com
+spring.mail.password=aeta ktxb qdoa uule
 #spring.mail.username=trananhhao225@gmail.com
 #spring.mail.password=xebn mtbz faho ygyi
 spring.mail.properties.auth = true
