--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,7 +10,7 @@ jwt.secret=Ik0HdjZT0CDZdBY5WEgEQ/81i2Mt2RjVUw1B/Uck3FM=
 server.servlet.context-path= /koifarm
 
 
-
+#for send email
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=koifarmofficial@gmail.com
