--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -38,4 +38,13 @@ fileUpload.rootPath=C:/Users/HP/Desktop/Uploads
 
 spring.servlet.multipart.max-file-size=10MB
 
+#VNPAY
+PAY_URL=https://sandbox.vnpayment.vn/paymentv2/vpcpay.html
+TMN_CODE=58X4B4HP
+SECRET_KEY=VRLDWNVWDNPCOEPBZUTWSEDQAGXJCNGZ
+RETURN_URL=http://localhost:8080/payment/vn-pay-callback
+VERSION=2.1.0
+COMMAND=pay
+ORDER_TYPE=other
+
 
