--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -40,9 +40,9 @@ spring.servlet.multipart.max-file-size=10MB
 
 #VNPAY
 PAY_URL=https://sandbox.vnpayment.vn/paymentv2/vpcpay.html
-TMN_CODE=58X4B4HP
-SECRET_KEY=VRLDWNVWDNPCOEPBZUTWSEDQAGXJCNGZ
-RETURN_URL=http://localhost:8080/payment/vn-pay-callback
+TMN_CODE=T8VLVRDV
+SECRET_KEY=JSHLCYPW3PO6PH5KHBSOESN7BUZCY3XR
+RETURN_URL=http://localhost:8080/koifarm/payment/vn-pay-callback
 VERSION=2.1.0
 COMMAND=pay
 ORDER_TYPE=other
