--- a/pom.xml
+++ b/pom.xml
@@ -100,7 +100,14 @@
 			<version>0.12.6</version>
 			<scope>runtime</scope>
 		</dependency>
-    </dependencies>
+		<!-- https://mvnrepository.com/artifact/com.google.firebase/firebase-admin -->
+		<dependency>
+			<groupId>com.google.firebase</groupId>
+			<artifactId>firebase-admin</artifactId>
+			<version>9.3.0</version>
+		</dependency>
+
+	</dependencies>
 
 	<build>
 		<plugins>
