--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -47,6 +47,10 @@ VERSION=2.1.0
 COMMAND=pay
 ORDER_TYPE=other
 
-credentialsFilePath=/koi-farm-shop-key.json
+credentialsFilePath=/Firebase/koi-farm-shop-key.json
+
+spring.servlet.multipart.enabled=true
+
+spring.servlet.multipart.max-request-size=10MB
 
 
