--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,12 @@
 spring.application.name=KoiFarmShop
-#Config MySQL
-spring.datasource.url=jdbc:mysql://localhost:3306/KoiFarmShop
+
+spring.datasource.url=mysql://koifarm:YLQeaguEoNpBGGfJUAhlsAbrhYVzpImH@autorack.proxy.rlwy.net:20328/railway
 spring.datasource.username=root
-spring.datasource.password=123
+spring.datasource.password=YLQeaguEoNpBGGfJUAhlsAbrhYVzpImH
+#Config MySQL
+#spring.datasource.url=jdbc:mysql://localhost:3306/KoiFarmShop
+#spring.datasource.username=root
+#spring.datasource.password=123
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=update
