--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=KoiFarmShop
 
-spring.datasource.url=jdbc:mysql://koifarm:YLQeaguEoNpBGGfJUAhlsAbrhYVzpImH@autorack.proxy.rlwy.net:20328/railway
+spring.datasource.url=jdbc:mysql://root:YLQeaguEoNpBGGfJUAhlsAbrhYVzpImH@autorack.proxy.rlwy.net:20328/railway
 spring.datasource.username=root
 spring.datasource.password=YLQeaguEoNpBGGfJUAhlsAbrhYVzpImH
 #Config MySQL
