--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,39 +1,34 @@
 spring.application.name=KoiFarmShop
+spring.config.import=optional:file:.env[.properties]
 
-#spring.datasource.url=jdbc:mysql://root:YLQeaguEoNpBGGfJUAhlsAbrhYVzpImH@autorack.proxy.rlwy.net:20328/railway
-#spring.datasource.username=root
-#spring.datasource.password=YLQeaguEoNpBGGfJUAhlsAbrhYVzpImH
-#Config MySQL
-spring.datasource.url=jdbc:mysql://localhost:3306/KoiFarmShop
-spring.datasource.username=root
-spring.datasource.password=123
+spring.datasource.url=${SPRING_DATASOURCE_URL}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=update
-jwt.secret=Ik0HdjZT0CDZdBY5WEgEQ/81i2Mt2RjVUw1B/Uck3FM=
-server.servlet.context-path= /koifarm
+jwt.secret=${JWT_SECRET}
+server.servlet.context-path= ${SERVER_SERVLET_CONTEXT_PATH}
 
 
 #for send email
-spring.mail.host=smtp.gmail.com
-spring.mail.port=587
-spring.mail.username=koifarmofficial@gmail.com
-spring.mail.password=aeta ktxb qdoa uule
-#spring.mail.username=trananhhao225@gmail.com
-#spring.mail.password=xebn mtbz faho ygyi
-spring.mail.properties.auth = true
-spring.mail.properties.starttls.enable = true
+spring.mail.host=${SPRING_MAIL_HOST}
+spring.mail.port=${SPRING_MAIL_PORT}
+spring.mail.username=${SPRING_MAIL_USERNAME}
+spring.mail.password=${SPRING_MAIL_PASSWORD}
+spring.mail.properties.auth = ${SPRING_MAIL_PROPERTIES_AUTH}
+spring.mail.properties.starttls.enable = ${SPRING_MAIL_PROPERTIES_STARTTLS_ENABLE}
 
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
 
-springdoc.api-docs.enabled=true
-springdoc.swagger-ui.enabled=true
-springdoc.swagger-ui.path=/swagger-ui.html
+springdoc.api-docs.enabled=${SPRINGDOC_API_DOCS_ENABLED}
+springdoc.swagger-ui.enabled=${SPRINGDOC_SWAGGER_UI_ENABLED}
+springdoc.swagger-ui.path=${SPRINGDOC_SWAGGER_UI_PATH}
 #login with gg
-spring.security.oauth2.client.registration.google.client-id=66425844845-e5tjsmdu437l5uj84hbrfce9aj9gcr2t.apps.googleusercontent.com
-spring.security.oauth2.client.registration.google.client-secret=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
-spring.security.oauth2.client.registration.google.scope=profile,email
+spring.security.oauth2.client.registration.google.client-id=${GOOGLE_CLIENT_ID}
+spring.security.oauth2.client.registration.google.client-secret=${GOOGLE_CLIENT_SECRET}
+spring.security.oauth2.client.registration.google.scope=${GOOGLE_SCOPE}
 
 # File upload configuration
 fileUpload.rootPath=C:/Users/HP/Desktop/Uploads
@@ -45,15 +40,15 @@ spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-request-size=10MB
 
 #VNPAY
-PAY_URL=https://sandbox.vnpayment.vn/paymentv2/vpcpay.html
-TMN_CODE=T8VLVRDV
-SECRET_KEY=I0BPSA8XRF408XRJ0JMSU101IFWQX5HR
-RETURN_URL=http://localhost:8080/koifarm/payment/vn-pay-callback
+PAY_URL=${PAY_URL}
+TMN_CODE=${TMN_CODE}
+SECRET_KEY=${SECRET_KEY}
+RETURN_URL=${RETURN_URL}
 VERSION=2.1.0
 COMMAND=pay
 ORDER_TYPE=other
 
-credentialsFilePath=/Firebase/koi-shop-3290e-firebase-adminsdk-1n8ru-30f97716b9.json
+credentialsFilePath=${CREDENTIALS_FILE_PATH}
 
 
 
