add update consignment healthcare

--- a/.env
+++ b/.env
@@ -45,3 +45,7 @@ ORDER_TYPE=other
 
 # Firebase credentials
 CREDENTIALS_FILE_PATH=/Firebase/koi-shop-3290e-firebase-adminsdk-1n8ru-340a5fdab4.json
+
+# Domain
+APP_DOMAIN=http://localhost:5173
+#APP_DOMAIN=https://koi-farm-shop-fe.vercel.app
