add more payment

--- a/.env
+++ b/.env
@@ -38,7 +38,8 @@ FILE_UPLOAD_ROOT_PATH=C:/Users/HP/Desktop/Uploads
 PAY_URL=https://sandbox.vnpayment.vn/paymentv2/vpcpay.html
 TMN_CODE=T8VLVRDV
 SECRET_KEY=I0BPSA8XRF408XRJ0JMSU101IFWQX5HR
-RETURN_URL=http://localhost:8080/koifarm/payment/vn-pay-callback
+RETURN_URL_ORDER=/koifarm/payment/vn-pay-callback
+RETURN_URL_CONSIGNMENT=/koifarm/payment/vn-pay-callback-consignment
 VERSION=2.1.0
 COMMAND=pay
 ORDER_TYPE=other
