--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -43,7 +43,8 @@ spring.servlet.multipart.max-request-size=10MB
 PAY_URL=${PAY_URL}
 TMN_CODE=${TMN_CODE}
 SECRET_KEY=${SECRET_KEY}
-RETURN_URL=${RETURN_URL}
+RETURN_URL_ORDER=${RETURN_URL_ORDER}
+RETURN_URL_CONSIGNMENT=${RETURN_URL_CONSIGNMENT}
 VERSION=2.1.0
 COMMAND=pay
 ORDER_TYPE=other
