--- a/.env
+++ b/.env
@@ -50,3 +50,6 @@ CREDENTIALS_FILE_PATH=/Firebase/koi-shop-3290e-firebase-adminsdk-1n8ru-340a5fdab
 # Domain
 APP_DOMAIN=http://localhost:5173
 #APP_DOMAIN=https://koi-farm-shop-fe.vercel.app
+# API Domain
+API_DOMAIN=http://localhost:8080
+#APP_DOMAIN=https://koi-farm-shop-fe.vercel.app
