--- a/pom.xml
+++ b/pom.xml
@@ -120,6 +120,12 @@
 			<artifactId>springdoc-openapi-ui</artifactId>
 			<version>1.6.15</version> <!-- Kiểm tra phiên bản mới nhất -->
 		</dependency>
+		<dependency>
+			<groupId>io.qameta.allure</groupId>
+			<artifactId>allure-junit5</artifactId>
+			<version>2.13.9</version>
+			<scope>test</scope>
+		</dependency>
 
     </dependencies>
 
