--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,6 +25,9 @@ spring.mail.properties.mail.smtp.starttls.required=true
 springdoc.api-docs.enabled=${SPRINGDOC_API_DOCS_ENABLED}
 springdoc.swagger-ui.enabled=${SPRINGDOC_SWAGGER_UI_ENABLED}
 springdoc.swagger-ui.path=${SPRINGDOC_SWAGGER_UI_PATH}
+springdoc.swagger-ui.layout=BaseLayout
+springdoc.swagger-ui.syntax-highlight.theme=agate
+
 #login with gg
 spring.security.oauth2.client.registration.google.client-id=${GOOGLE_CLIENT_ID}
 spring.security.oauth2.client.registration.google.client-secret=${GOOGLE_CLIENT_SECRET}
